updated nova bot

--- a/index.html
+++ b/index.html
@@ -103,24 +103,29 @@
         <!-- Project 1 -->
         <div class="project-card">
           <img src="assets/images/projects/multimodal.png" alt="Multimodal Calibration Dataset">
-          <h3>Multimodal Calibration Dataset</h3>
-          <p>Designed a pipeline for collecting multimodal calibration datasets using robotic arms and motion capture systems.</p>
+          <h3>Multimodal Calibration Dataset - CALIBDB</h3>
+          <p>A versatile multimodal calibration platform that uses robotic arms and a high-precision MoCap system to collect diverse extrinsic data between cameras and LiDAR sensors across both static and dynamic configurations.</p>
+          <P> Submitted to RSS 2025 (pending approval)</P>
         </div>
         <!-- Project 2 -->
         <a href="plate_cleaning_arm.html" style="text-decoration: none; color: inherit;">
           <div class="project-card">
             <img src="assets/images/projects/arm.gif" alt="Plate Cleaning Robot">
             <h3>Plate Cleaning Robot</h3>
-            <p>Developed an automated plate-cleaning system using ABB IRB 120 robotic arm with precise trajectory planning.</p>
+            <p>Developed an automated plate-cleaning system with an ABB IRB 120 robotic arm using inverse kinematics and PD control for spiral motions.</p>
+            <p> It features efficient trajectory planning and enhanced reliability through random plate positioning and robust task space design.</p>
           </div>
         </a>
         
         <!-- Project 3 -->
+        <a href="autonomous_indoor_delivery_robot.html" style="text-decoration: none; color: inherit;">
         <div class="project-card">
           <img src="assets/images/projects/nova.jpg" alt="Autonomous Indoor Delivery Robot">
           <h3>Autonomous Indoor Delivery Robot</h3>
-          <p>Built an autonomous delivery robot using ROS, TEB planner, and sensor fusion for high-accuracy localization.</p>
+          <p>Developed an autonomous indoor delivery robot using ROS for precise path planning. Integerated sensor fusion (Lidar, Wheel odom, IMU) with EKF for high accuracy localization.</p>
+          <p>Designed a PyQT-based GUI for easy user interation and voice control.</p>
         </div>
+      </a>
         <!-- Project 4 -->
         <div class="project-card">
           <img src="assets/images/projects/4wd.jpg" alt="4WD Outdoor Navigation Robot">
