project section update

--- a/autonomous_indoor_delivery_robot.html
+++ b/autonomous_indoor_delivery_robot.html
@@ -128,15 +128,13 @@
     </figure>
   </div>
   
-<div class="media-link" style="text-align: center; color: #fff;"></div>
-      <div style="text-align: center;">
-            <p>For More Photos and Videos Visit</p>
-            <a href="https
-      <a href="https://photos.app.goo.gl/rMXf2ZqJBj95Wx5AA" target="_blank" style="color: #fff; font-size: 1.2rem;">
-            <i class="fab fa-google" style="font-size: 2rem;"></i>oogle Photos
+  <div class="media-link" style="text-align: center; margin-top: 2rem;">
+      <p style="color: #fff;">For More Photos and Videos Visit</p>
+      <a href="https://photos.app.goo.gl/rMXf2ZqJBj95Wx5AA" target="_blank" style="display: inline-block; padding: 0.5rem 1rem; background: #1db954; color: #fff; border-radius: 5px; text-decoration: none; font-size: 1.2rem;">
+        <i class="fab fa-google" style="font-size: 2rem; vertical-align: middle; margin-right: 0.5rem;"></i> Google Photos
       </a>
-</div>
-  
+    </div>
+    
   <!-- Footer -->
   <footer style="text-align: center; padding: 1rem 0; background-color: #000; color: #1db954;">
     <p>&copy; 2025 Jerin Peter. All rights reserved.</p>
