--- a/index.html
+++ b/index.html
@@ -127,11 +127,13 @@
         </div>
       </a>
         <!-- Project 4 -->
+        <a href="4wd_outdoor_nav.html" style="text-decoration: none; color: inherit;">
         <div class="project-card">
           <img src="assets/images/projects/4wd.jpg" alt="4WD Outdoor Navigation Robot">
           <h3>4WD Outdoor Navigation Robot</h3>
           <p>Developed a 4-wheel drive robot with 3D camera for real-time appearance-based mapping and navigation.</p>
         </div>
+      </a>
         <!-- Project 5 -->
         <div class="project-card">
           <img src="assets/images/projects/psr.png" alt="All-Terrain Medical Security Phase Shifting Rover">
