--- a/autonomous_indoor_delivery_robot.html
+++ b/autonomous_indoor_delivery_robot.html
@@ -69,9 +69,8 @@
     <p><em>Efficient Last Mile Delivery in Indoor Environments</em></p>
 <div style="text-align: center;">
       <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/xsw3N9XQKTw?si=8h8LEP_chw9VP12b" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
-</div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/xsw3N9XQKTw?si=H4bJVBvwwuscdOsh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>      </div>
+
 
     <h2>Abstract</h2>
     <p>
