--- a/index.html
+++ b/index.html
@@ -131,21 +131,25 @@
         <div class="project-card">
           <img src="assets/images/projects/4wd.jpg" alt="4WD Outdoor Navigation Robot">
           <h3>4WD Outdoor Navigation Robot</h3>
-          <p>Developed a 4-wheel drive robot with 3D camera for real-time appearance-based mapping and navigation.</p>
+          <p>Developed a 4-wheel drive robot with 3D camera for real-time appearance-based mapping and navigation in Gps denied environments.</p>
         </div>
       </a>
         <!-- Project 5 -->
+        <a href="all_terrain_medical_rover.html" style="text-decoration: none; color: inherit;">
         <div class="project-card">
           <img src="assets/images/projects/psr.png" alt="All-Terrain Medical Security Phase Shifting Rover">
           <h3>All-Terrain Medical Security Phase Shifting Rover</h3>
           <p>Designed a modular rover for disaster management with adaptive height/width adjustments and toxic gas detection.</p>
         </div>
+      </a>
         <!-- Project 6 -->
+        <a href="low_cost_autonomous_robot.html" style="text-decoration: none; color: inherit;">
         <div class="project-card">
           <img src="assets/images/projects/mini.png" alt="Mini Indoor Autonomous Nav Bot">
           <h3>Mini Indoor Autonomous Nav Bot</h3>
           <p>A mini autonomous navigation robot based on the LinoRobot Repository.</p>
         </div>
+      </a>
         <!-- Project 7 -->
         <div class="project-card">
           <img src="assets/images/projects/mecanum.png" alt="Holonomic Autonomous Navigation Mobile Robot">
