project page update

--- a/index.html
+++ b/index.html
@@ -151,29 +151,37 @@
         </div>
       </a>
         <!-- Project 7 -->
+        <a href="mecanum.html" style="text-decoration: none; color: inherit;">
         <div class="project-card">
           <img src="assets/images/projects/mecanum.png" alt="Holonomic Autonomous Navigation Mobile Robot">
-          <h3>Holonomic Autonomous Navigation Mobile Robot</h3>
-          <p>An implementation with sampling-based trajectory planner and PID control.</p>
+          <h3>Mecanum Wheel Based Nav. Robot</h3>
+          <p>An implementation of autonomous navigation with sampling-based trajectory planner and drift control using PID.</p>
         </div>
+      </a>
         <!-- Project 8 -->
+        <a href="turtle_game.html" style="text-decoration: none; color: inherit;">
         <div class="project-card">
           <img src="assets/images/projects/demo.gif" alt="Turtlesim based Game in ROS">
           <h3>Turtlesim based Game in ROS</h3>
-          <p>Spawn a turtle and try moving it along a line.</p>
+          <p>A game made with TurtleSim in ROS, the task is to drive the turtle around a predefined path without going out of the line..</p>
         </div>
+      </a>
         <!-- Project 9 -->
+        <a href="outdoorbot.html" style="text-decoration: none; color: inherit;">
         <div class="project-card">
           <img src="assets/images/projects/outdoor.png" alt="RTK GPS Based Outdoor Nav. Bot">
           <h3>RTK GPS Based Outdoor Nav. Bot</h3>
           <p>Autonomous navigation with sensor fusion and RTK GPS.</p>
         </div>
-        <!-- Project 10 -->
+      </a>
+
+      <a href="dqn.html" style="text-decoration: none; color: inherit;">
         <div class="project-card">
           <img src="assets/images/projects/rl.png" alt="Autonomous Navigation of a Mecanum Robot Using DQN in ROS 2">
           <h3>Autonomous Navigation of a Mecanum Robot Using DQN in ROS 2</h3>
           <p>Holonomic navigation implementation with sampling-based trajectory planner and PID control.</p>
         </div>
+      </a>
         <!-- Project 11 -->
         <div class="project-card">
           <img src="assets/images/projects/spidy.png" alt="4 Legged Spider Robot">
