--- a/index.html
+++ b/index.html
@@ -204,25 +204,36 @@
             <p>Implemented chat-like application consisting of 2 nodes in ROS, Implementation of basic subscriber-publisher, using the concept of multithreading using AsyncSpinner in ROS.</p>
           </div>
         </a>
+        <a href="selfdriving.html" style="text-decoration: none; color: inherit;">
+        <div class="project-card">
+          <img src="assets/images/projects/lanefollowing.png" alt="Lane Following Robot">
+          <h3>Lane Following Robot</h3>
+          <p>OpenCV based lane following algorithm implementation.</p>
+        </div>
+        </a>
         <!-- Project 11 -->
+        <a href="https://photos.app.goo.gl/h2pmLLuwtx7CN4xdA" target="_blank" style="text-decoration: none; color: inherit;">
         <div class="project-card">
           <img src="assets/images/projects/spidy.png" alt="4 Legged Spider Robot">
           <h3>4 Legged Spider Robot</h3>
           <p>Holonomic navigation implementation with sampling-based trajectory planner and PID control.</p>
         </div>
+        </a>
         <!-- Project 12 -->
+        <a href="https://youtube.com/shorts/h-e4w2_vm8c" target="_blank" style="text-decoration: none; color: inherit;">
         <div class="project-card">
           <img src="assets/images/projects/Automatic Soap Dispenser.png" alt="Automatic Soap / Sanitizer Dispenser">
           <h3>Automatic Soap / Sanitizer Dispenser</h3>
-          <p>Implementation with sampling-based trajectory planner and PID control.</p>
+          <p>Rack and pinion based soap Dispenser system.</p>
         </div>
+        </a>
         <!-- Project 13 -->
 
         <!-- Project 14 -->
         <div class="project-card">
           <img src="assets/images/projects/waterbot.png" alt="Water Body Cleaning Robot">
           <h3>Water Body Cleaning Robot</h3>
-          <p>Robot plans path to clean water bodies and returns.</p>
+          <p>A prototype of an autonomous water cleaning robot with gps based mission planning for covering a water body for collecting waste.</p>
         </div>
         <!-- Project 15 -->
         <div class="project-card">
@@ -249,16 +260,12 @@
           <p>NodeMCU based control of sockets using IFTTT and Gassit.</p>
         </div>
         <!-- Project 19 -->
-        <div class="project-card">
-          <img src="assets/images/projects/lanefollowing.png" alt="Lane Following Robot">
-          <h3>Lane Following Robot</h3>
-          <p>OpenCV based lane following algorithm implementation.</p>
-        </div>
+
         <!-- Project 20 -->
         <div class="project-card">
           <img src="assets/images/projects/dirtcar.png" alt="RC offroad car with drift control">
           <h3>RC offroad car with drift control</h3>
-          <p>OpenCV based lane following and drift control implementation.</p>
+          <p>RC dirt car with flip detection and control switching.</p>
         </div>
 
       </div>
