--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         <div class="project-card">
           <img src="assets/images/projects/drone.jpg" alt="Racing Drone with CC3D">
           <h3>Racing Drone with CC3D</h3>
-          <p>Drone-based implementation with autonomous flight features.</p>
+          <p>PID tuned racing drone that can perform stuent maneuvers.</p>
         </div>
         <!-- Project 16 -->
         <div class="project-card">
