resume button + remove more button

--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
       </div>
     </div>
   </section>
+    <!-- Resume Button -->
+    <div class="resume-container">
+      <a href="https://drive.google.com/file/d/1uh0uZJYCMabrNe1ZgiYcL_7Oc0FJtWtU/view?usp=sharing" 
+         target="_blank" class="resume-button">
+        Resume
+      </a>
+    </div>
+  
 
 
   <!-- About Section -->
@@ -47,19 +55,13 @@
     <div class="container black-box">
       <h2>About Me</h2>
       <p>
+
         I am a Robotics Engineer with a Master's degree from the University of California, Riverside, specializing in
         control and navigation. I have a strong background in robotics, automation, and sensor fusion, with hands-on
         experience in ROS, Python, C++, and embedded systems.
+        
       </p>
-      <!-- <div class="skills">
-        <h3>Skills</h3>
-        <ul>
-          <li>C++, Python, Embedded C</li>
-          <li>ROS1 & ROS2, Git, Docker</li>
-          <li>Linux, FreeRTOS, Windows</li>
-        </ul>
-      </div>
-    </div> -->
+
   </section>
 
   <!-- Education Section -->
@@ -269,7 +271,7 @@
         </div>
 
       </div>
-      <button class="more-button" id="toggleProjects">More Projects</button>
+      <!-- <button class="more-button" id="toggleProjects">More Projects</button> -->
     </div>
   </section>
 
@@ -336,7 +338,7 @@
   <section id="contact" class="contact-section">
     <div class="container">
       <h2>Contact Me</h2>
-      <p>Feel free to reach out for collaborations or opportunities!</p>
+      <p style="text-align: center;">Feel free to reach out for collaborations or opportunities!</p>
       <div class="contact-info">
         <p>Email: <a href="mailto:jerinpeter@gmail.com">jerinpeter@gmail.com</a></p>
         <p>Phone: +1 (951) 275-7664</p>
