--- a/index.html
+++ b/index.html
@@ -281,17 +281,21 @@
     <div class="container">
       <h2>Experience</h2>
       <div class="timeline">
+        <div class="timeline-item right">
+          <div class="timeline-content">
+            <img src="assets/images/companies/ucr.png" alt="Asimov Robotics">
+            <h3>UC Riverside</h3>
+            <p>Teaching Assistant - EE Dept.</p>
+            <p>Oct 2024 - Dec 2024</p>
+
+          </div>
+        </div>
         <div class="timeline-item left">
           <div class="timeline-content">
             <img src="assets/images/companies/iptif.png" alt="ITP Palakkad Technology IHub Foundation">
             <h3>ITP Palakkad Technology IHub Foundation</h3>
             <p>Project Engineer - Mobile Robotics</p>
-            <p>Aug 2022 - Present</p>
-            <ul>
-              <li>Studied forward/inverse kinematics and dynamics of wheeled mobile robots.</li>
-              <li>Implemented PID control for a Holonomic mobile robot.</li>
-              <li>Developed an autonomous outdoor navigation robot using RTK GPS and sensor fusion.</li>
-            </ul>
+            <p>Jul 2023 - Feb 2024</p>
           </div>
         </div>
         <div class="timeline-item right">
@@ -300,10 +304,7 @@
             <h3>Asimov Robotics</h3>
             <p>Software Intern - ROS Developer</p>
             <p>Aug 2022 - Jun 2023</p>
-            <ul>
-              <li>Updated the software stack from Ubuntu 16.04 to Ubuntu 20.04 and ROS Noetic.</li>
-              <li>Implemented differential drive and odometry calculation for robot pose estimation.</li>
-            </ul>
+
           </div>
         </div>
         <div class="timeline-item left">
@@ -312,10 +313,18 @@
             <h3>THIAN</h3>
             <p>Research Assistant & Community Development</p>
             <p>Aug 2021 - Oct 2021</p>
-            <ul>
-              <li>Implemented sensor fusion for accurate odometry computation.</li>
-              <li>Organized workshops on ROS and agricultural drones.</li>
-            </ul>
+
+          </div>
+        </div>
+
+
+        <div class="timeline-item right">
+          <div class="timeline-content">
+            <img src="assets/images/companies/aug.png" alt="Augsense Labs">
+            <h3>Augsense Labs</h3>
+            <p>Software Intern - ROS Developer</p>
+            <p>Feb 2020 - Sept 2020</p>
+
           </div>
         </div>
       </div>
@@ -327,9 +336,9 @@
     <div class="container">
       <h2>Publications</h2>
       <ul>
-        <li>Development of a Low-Cost Multipurpose Autonomous Navigation Robot - IEEE AIC 2022</li>
-        <li>Development of an Autonomous Ground Robot Using RTAB Algorithm - AIR 2023</li>
-        <li>Development of an Intuitive Autonomous Ground Robot for Indoor Delivery Applications - IPDIMS 2024</li>
+        <li style="text-align: center;"><a href="https://ieeexplore.ieee.org/abstract/document/9848857" style="text-decoration: none; color: inherit;" onmouseover="this.style.backgroundColor='#ffcc00';" onmouseout="this.style.backgroundColor='';">Development of a Low-Cost Multipurpose Autonomous Navigation Robot - IEEE AIC 2022</a></li>
+        <li style="text-align: center;"><a href="https://dl.acm.org/doi/abs/10.1145/3610419.3610472" style="text-decoration: none; color: inherit;" onmouseover="this.style.backgroundColor='#ffcc00';" onmouseout="this.style.backgroundColor='';">Development of an Autonomous Ground Robot Using RTAB Algorithm - AIR 2023 - ACM</a></li>
+        <li style="text-align: center;"><a href="https://link.springer.com/chapter/10.1007/978-981-97-6732-8_3" style="text-decoration: none; color: inherit;" onmouseover="this.style.backgroundColor='#ffcc00';" onmouseout="this.style.backgroundColor='';">Development of an Intuitive Autonomous Ground Robot for Indoor Delivery Applications - IPDIMS 2024 - Springer Nature</a></li>
       </ul>
     </div>
   </section>
