--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         <div class="project-card">
           <img src="assets/images/projects/spidy.png" alt="4 Legged Spider Robot">
           <h3>4 Legged Spider Robot</h3>
-          <p>Holonomic navigation implementation with sampling-based trajectory planner and PID control.</p>
+          <p>Studied inverse kinematics for legged motion and Implemented different gait patterns.</p>
         </div>
         </a>
         <!-- Project 12 -->
