--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
         <div class="timeline-item left">
           <div class="timeline-content">
             <img src="assets/images/companies/tihan.png" alt="THIAN">
-            <h3>THIAN</h3>
+            <h3>TiHAN</h3>
             <p>Research Assistant & Community Development</p>
             <p>Aug 2021 - Oct 2021</p>
 
