--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         <div class="timeline-item left">
           <div class="timeline-content">
             <img src="assets/images/companies/iptif.png" alt="ITP Palakkad Technology IHub Foundation">
-            <h3>ITP Palakkad Technology IHub Foundation</h3>
+            <h3>IIT Palakkad Technology IHub Foundation</h3>
             <p>Project Engineer - Mobile Robotics</p>
             <p>Jul 2023 - Feb 2024</p>
           </div>
