--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <!-- Project 1 -->
         <div class="project-card">
           <img src="assets/images/projects/multimodal.png" alt="Multimodal Calibration Dataset">
-          <h3>Multimodal Calibration Dataset - CALIBDB</h3>
+          <h3>Multimodal Calibration Dataset</h3>
           <p>A versatile multimodal calibration platform that uses robotic arms and a high-precision MoCap system to
             collect diverse extrinsic data between cameras and LiDAR sensors across both static and dynamic
             configurations.</p>
