--- a/plate_cleaning_arm.html
+++ b/plate_cleaning_arm.html
@@ -253,12 +253,11 @@ dist(i) = √((xcurrent - xi)² + (ycurrent - yi)²)
       The robotic system successfully demonstrates dishwashing tasks through a controlled spiral motion. The implementation highlights the effectiveness of numerical IK methods and PD controllers in achieving precise and efficient robotic operations. Future work may include optimizing control parameters and exploring advanced trajectory planning algorithms.
     </p>
 
-    <h2>Appendix A: MATLAB Code</h2>
+    <h2>MATLAB Code</h2>
     <div class="github-link">
       <a href="https://github.com/jerinpeter/DIshWashingArm" target="_blank">
-        <i class="fab fa-github"></i>
+        <i class="fab fa-github" style="font-size: 3rem;"></i>
       </a>
-      <p>View the MATLAB code on GitHub</p>
     </div>
   </div>
   
