--- a/index.html
+++ b/index.html
@@ -565,9 +565,18 @@
       <div class="contact-info">
         <p>Email: <a href="mailto:jerinpeter@gmail.com">jerinpeter@gmail.com</a></p>
         <p>Phone: +1 (951) 275-7664</p>
+        <!-- Social media icons -->
+        <div class="social-links animated-text">
+          <a href="https://linkedin.com/in/jerinpeter" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/jerinpeter" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://jerinpeter14.medium.com/" target="_blank"><i class="fab fa-medium-m"></i></a>
+          <a href="mailto:jerinpeter@gmail.com"><i class="fas fa-envelope"></i></a>
+          <a href="https://www.instagram.com/jerin_peter/" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>
       </div>
     </div>
   </section>
+  
 
   <!-- Footer -->
   <footer>
