--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
               <li>Deep Reinforcement Learning</li>
               <li>Mecanum Kinematics</li>
               <li>Autonomous Navigation</li>
+              <li>PyTorch</li>
               <li>Simulation</li>
             </ul>
           </div>
