--- a/index.html
+++ b/index.html
@@ -525,38 +525,79 @@
     </div>
   </section>
 
+  
   <!-- Publications Section -->
   <section id="publications" class="publications-section">
     <div class="container">
       <h2>Publications</h2>
-      <ul>
-        <li style="text-align: center;">
-          <a href="https://ieeexplore.ieee.org/abstract/document/9848857"
-             style="text-decoration: none; color: inherit;"
-             onmouseover="this.style.backgroundColor='#ffcc00';"
-             onmouseout="this.style.backgroundColor='';">
-            Development of a Low-Cost Multipurpose Autonomous Navigation Robot - IEEE AIC 2022
-          </a>
-        </li>
-        <li style="text-align: center;">
-          <a href="https://dl.acm.org/doi/abs/10.1145/3610419.3610472"
-             style="text-decoration: none; color: inherit;"
-             onmouseover="this.style.backgroundColor='#ffcc00';"
-             onmouseout="this.style.backgroundColor='';">
-            Development of an Autonomous Ground Robot Using RTAB Algorithm - AIR 2023 - ACM
-          </a>
-        </li>
-        <li style="text-align: center;">
-          <a href="https://link.springer.com/chapter/10.1007/978-981-97-6732-8_3"
-             style="text-decoration: none; color: inherit;"
-             onmouseover="this.style.backgroundColor='#ffcc00';"
-             onmouseout="this.style.backgroundColor='';">
-            Development of an Intuitive Autonomous Ground Robot for Indoor Delivery Applications - IPDIMS 2024 - Springer Nature
-          </a>
-        </li>
-      </ul>
+      <div class="publications-grid">
+        
+        <!-- Publication 1 -->
+        <div class="publication-card">
+          <div class="publication-info">
+            <h3>Development of a Low-Cost Multipurpose Autonomous Navigation Robot</h3>
+            <p>
+              2022 IEEE World Conference on Applied Intelligence and Computing (AIC), 
+              Sonbhadra, India, 2022, pp. 451-454, doi: 10.1109/AIC55036.2022.9848857
+            </p>
+            <a 
+              href="https://ieeexplore.ieee.org/abstract/document/9848857" 
+              target="_blank" 
+              class="publication-link"
+            >
+              View Paper
+            </a>
+          </div>
+        </div>
+  
+        <!-- Publication 2 -->
+        <div class="publication-card">
+          <div class="publication-info">
+            <h3>
+              Development of an Autonomous Ground Robot Using a Real-Time Appearance 
+              Based (RTAB) Algorithm
+            </h3>
+            <p>
+              In Proceedings of the 2023 6th International Conference on Advances in Robotics (AIR '23). 
+              <br/>
+              <em>https://doi.org/10.1145/3610419.3610472</em>
+            </p>
+            <a 
+              href="https://dl.acm.org/doi/abs/10.1145/3610419.3610472" 
+              target="_blank" 
+              class="publication-link"
+            >
+              View Paper
+            </a>
+          </div>
+        </div>
+  
+        <!-- Publication 3 -->
+        <div class="publication-card">
+          <div class="publication-info">
+            <h3>
+              Development of an Intuitive Autonomous Ground Robot for Indoor Delivery Applications
+            </h3>
+            <p>
+              In: Deepak, B.B.V.L., Bahubalendruni, M.R., Parhi, D., Biswal, B.B. (eds) Recent 
+              Advancements in Product Design and Manufacturing Systems. IPDIMS 2023. 
+              <br/>
+              <em>https://doi.org/10.1007/978-981-97-6732-8_3</em>
+            </p>
+            <a 
+              href="https://link.springer.com/chapter/10.1007/978-981-97-6732-8_3" 
+              target="_blank" 
+              class="publication-link"
+            >
+              View Paper
+            </a>
+          </div>
+        </div>
+  
+      </div>
     </div>
   </section>
+  
 
   <!-- Contact Section -->
   <section id="contact" class="contact-section">
