--- a/index.html
+++ b/index.html
@@ -536,15 +536,11 @@
         <div class="publication-card">
           <div class="publication-info">
             <h3>Development of a Low-Cost Multipurpose Autonomous Navigation Robot</h3>
+            <p class="publication-authors">J. Peter and M. J. Thomas</p>
             <p>
-              2022 IEEE World Conference on Applied Intelligence and Computing (AIC), 
-              Sonbhadra, India, 2022, pp. 451-454, doi: 10.1109/AIC55036.2022.9848857
+              2022 IEEE World Conference on Applied Intelligence and Computing (AIC), Sonbhadra, India, 2022, pp. 451-454, doi: 10.1109/AIC55036.2022.9848857
             </p>
-            <a 
-              href="https://ieeexplore.ieee.org/abstract/document/9848857" 
-              target="_blank" 
-              class="publication-link"
-            >
+            <a href="https://ieeexplore.ieee.org/abstract/document/9848857" target="_blank" class="publication-link">
               View Paper
             </a>
           </div>
@@ -553,20 +549,13 @@
         <!-- Publication 2 -->
         <div class="publication-card">
           <div class="publication-info">
-            <h3>
-              Development of an Autonomous Ground Robot Using a Real-Time Appearance 
-              Based (RTAB) Algorithm
-            </h3>
+            <h3>Development of an Autonomous Ground Robot Using a Real-Time Appearance Based (RTAB) Algorithm</h3>
+            <p class="publication-authors">J. Peter, M. J. Thomas, Mohan S. </p>
             <p>
-              In Proceedings of the 2023 6th International Conference on Advances in Robotics (AIR '23). 
-              <br/>
+              In Proceedings of the 2023 6th International Conference on Advances in Robotics (AIR '23). <br/>
               <em>https://doi.org/10.1145/3610419.3610472</em>
             </p>
-            <a 
-              href="https://dl.acm.org/doi/abs/10.1145/3610419.3610472" 
-              target="_blank" 
-              class="publication-link"
-            >
+            <a href="https://dl.acm.org/doi/abs/10.1145/3610419.3610472" target="_blank" class="publication-link">
               View Paper
             </a>
           </div>
@@ -575,20 +564,13 @@
         <!-- Publication 3 -->
         <div class="publication-card">
           <div class="publication-info">
-            <h3>
-              Development of an Intuitive Autonomous Ground Robot for Indoor Delivery Applications
-            </h3>
+            <h3>Development of an Intuitive Autonomous Ground Robot for Indoor Delivery Applications</h3>
+            <p class="publication-authors">Peter J., Thomas M.J., Gokulkrishna S., Cholappally K., Mohan S.</p>
             <p>
-              In: Deepak, B.B.V.L., Bahubalendruni, M.R., Parhi, D., Biswal, B.B. (eds) Recent 
-              Advancements in Product Design and Manufacturing Systems. IPDIMS 2023. 
-              <br/>
+              In: Deepak, B.B.V.L., Bahubalendruni, M.R., Parhi, D., Biswal, B.B. (eds) Recent Advancements in Product Design and Manufacturing Systems. IPDIMS 2023. <br/>
               <em>https://doi.org/10.1007/978-981-97-6732-8_3</em>
             </p>
-            <a 
-              href="https://link.springer.com/chapter/10.1007/978-981-97-6732-8_3" 
-              target="_blank" 
-              class="publication-link"
-            >
+            <a href="https://link.springer.com/chapter/10.1007/978-981-97-6732-8_3" target="_blank" class="publication-link">
               View Paper
             </a>
           </div>
@@ -597,6 +579,7 @@
       </div>
     </div>
   </section>
+  
   
 
   <!-- Contact Section -->
