paper name updatation

--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
             <h3>Development of an Intuitive Autonomous Ground Robot for Indoor Delivery Applications</h3>
             <p class="publication-authors">Peter J., Thomas M.J., Gokulkrishna S., Cholappally K., Mohan S.</p>
             <p>
-              In: Deepak, B.B.V.L., Bahubalendruni, M.R., Parhi, D., Biswal, B.B. (eds) Recent Advancements in Product Design and Manufacturing Systems. IPDIMS 2023. <br/>
+              Recent Advancements in Product Design and Manufacturing Systems. IPDIMS 2023. <br/>
               <em>https://doi.org/10.1007/978-981-97-6732-8_3</em>
             </p>
             <a href="https://link.springer.com/chapter/10.1007/978-981-97-6732-8_3" target="_blank" class="publication-link">
